--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^11.0.2",
+    "iconsax-react": "^0.0.8",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "victory": "^36.8.2"
