--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^11.0.2",
     "iconsax-react": "^0.0.8",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
